--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,4 +2,4 @@ version: 0.1
 phases:
   build:
     commands:
-      - mvn verify sonar:sonar -Dsonar.projectKey=projectKey -Dsonar.organization=projectOrg -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=token 
+      - mvn verify sonar:sonar -Dsonar.projectKey=java -Dsonar.organization=gratt410 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=d8b064b0aeae387f9629d9d72b5f9053c0705db9
