--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,8 @@
 version: 0.1
+env:
+    secrets-manager:
+     TOKEN: sonarCloud:tokenforsonar
 phases:
   build:
     commands:
-      - mvn verify sonar:sonar -Dsonar.projectKey=javaplayground1234 -Dsonar.organization=javaplayground1234 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=e8addc749a4b1d4658c84d21a224ed2fe711d7b4
+      - mvn verify sonar:sonar -Dsonar.projectKey=javaplayground1234 -Dsonar.organization=javaplayground1234 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$TOKEN
