--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,15 @@
 version: 0.1
-env:
-    secrets-manager:
-     TOKEN: sonarCloud:tokenforsonar
 phases:
   build:
     commands:
-      - mvn verify sonar:sonar -Dsonar.projectKey=javaplayground1234 -Dsonar.organization=javaplayground1234 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$TOKEN
+    - |-
+        apt-get update
+        apt-get -y install wget
+        apt-get -y install default-jdk
+        wget https://github.com/zaproxy/zaproxy/releases/download/v2.14.0/ZAP_2.14.0_Linux.tar.gz
+        tar -xvf ZAP_2.14.0_Linux.tar.gz
+        cd ZAP_2.14.0
+        ./zap.sh -cmd -quickurl https://www.example.com -quickprogress -quickout ../zap_report.html 
+artifacts:
+  files:
+    - zap_report.html
